# allmart

./: README.md  pyproject.toml  requirements.txt
allmart/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
allmart/conf/base/: catalog.yml  parameters.yml  parameters_data_ingestion.yml  parameters_data_preprocessing.yml  parameters_feature_engineering.yml  parameters_model_prediction.yml  parameters_model_training.yml
allmart/conf/production/: catalog.yml
allmart/conf/test/: catalog.yml
allmart/notebooks/: c02_analise-descritiva.ipynb  c03_aprimorando_metricas.ipynb  c05_eda.ipynb  c07_eda-final.ipynb  c08_modeling_clusters.ipynb  c09_model_performances.ipynb  c11_hypothesis_validation.ipynb  c12_quadro_de_respostas.ipynb  c13_deploy.ipynb  thefinal.ipynb
allmart/src/allmart/: __init__.py  __main__.py  pipeline_registry.py
allmart/src/allmart/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
allmart/src/allmart/pipelines/data_preprocessing/: __init__.py  nodes.py  pipeline.py
allmart/src/allmart/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
allmart/src/allmart/pipelines/model_prediction/: __init__.py  nodes.py  pipeline.py
allmart/src/allmart/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
allmart/tests/pipelines/data_ingestion/: test_pipeline.py
allmart/tests/pipelines/data_preprocessing/: test_pipeline.py
allmart/tests/pipelines/feature_engineering/: test_pipeline.py
allmart/tests/pipelines/model_prediction/: test_pipeline.py
allmart/tests/pipelines/model_training/: test_pipeline.py
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
notebooks/: c00_planejamento.ipynb  c01_definindo-metricas.ipynb  c04_feature_engineering.ipynb  c06_eda-II.ipynb  c08_modeling_clusters.ipynb  c09_model_performances.ipynb  c10_model_results.ipynb  c11_hypothesis_validation.ipynb  c12_deploy_part1.ipynb  c12_quadro_de_respostas.ipynb  c13_deploy.ipynb  insiders_db.sqlite  thefinal.ipynb
src/: requirements.txt  setup.py
src/all_mart/: __init__.py  __main__.py  settings.py
src/all_mart/pipelines/data_processing/: nodes.py  pipeline.py
src/tests/: test_run.py
