[project]
name = "allmart"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black==22.12.0",
    "charset-normalizer==2.1.1",
    "flake8==4.0.1",
    "fqdn==1.5.1",
    "httptools==0.5.0",
    "isoduration==20.11.0",
    "isort==5.11.4",
    "jsonpointer==2.3",
    "jupyter==1.0.0",
    "jupyter-events>=0.12.0",
    "jupyter-server-terminals==0.4.4",
    "jupyterlab==3.5.2",
    "kedro-datasets[pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset]~=1.1",
    "kedro-telemetry>=0.6.2",
    "kedro-viz==5.1.1",
    "nbstripout==0.6.1",
    "numba>=0.53.1",
    "numpy>=2.0.2",
    "openpyxl==3.0.10",
    "pandas>=2.2.3",
    "pip-chill==1.0.1",
    "pyarrow==6.0.1",
    "pytest-cov==3.0.0",
    "pytest-mock==1.13.0",
    "python-dotenv==0.21.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "scikit-learn>=1.0",
    "seaborn==0.12.2",
    "umap-learn==0.5.3",
    "uri-template==1.2.0",
    "uvloop==0.17.0",
    "webcolors==1.12",
    "websockets==10.4",
    "yellowbrick==1.5",
]

[tool.uv]
dev-dependencies = [
]


[tool.kedro]
package_name = "all_mart"
project_name = "All Mart"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/all_mart -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
